--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.error.include-message=always
 server.error.include-binding-errors=always
 #server.error.include-stacktrace=always
 
-spring.datasource.url=jdbc:h2:men:testdb
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
