--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,19 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
+
+spring.main.banner-mode=off
+
+info.app.name=Spring Boot Master Class Course
+info.app.description=Master Spring Boot
+info.app.version=1.0.0
+info.company.name=Mohammadreza
+
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=health,info,prometheus
